# rag-framework

./: .gitignore  Cargo.toml  README.md  config.json  test.txt
docs/: multi-engine.md
src/: config.rs  error.rs  lib.rs  main.rs  store.rs
src/ingest/: chunker.rs  mod.rs  pdf.rs
src/providers/: embeddings.rs  llm.rs
src/routes/: delete.rs  health.rs  mod.rs  query.rs  upload.rs
tests/: http_endpoints.rs
